# GildedRose-Kata

./: .gitignore  CMakeLists.txt  GildedRose.pro  GildedRose.qbs  GildedRose.sln  GildedRose.vcxproj  GildedRoseApp.vcxproj  GildedRoseTests.vcxproj  Makefile  README.md
App/: App.pro
UnitTests/: UnitTests.pro
src/: CMakeLists.txt
src/gilded_rose/: CMakeLists.txt
